// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render the summary with items correctly 1`] = `
<div>
  <h2>
    Viewing 
    3
     expense
    s
     totalling 
    € 1.141,95
  </h2>
</div>
`;

exports[`should render the summary with one item correctly 1`] = `
<div>
  <h2>
    Viewing 
    1
     expense
     totalling 
    € 1,95
  </h2>
</div>
`;

exports[`should render the summary without items correctly 1`] = `
<div>
  <h2>
    Viewing 
    0
     expense
    s
     totalling 
    € 0,00
  </h2>
</div>
`;
